Mermaid to draw tree

--- a/djsite/coolsite/roadmap/templates/roadmap/index.html
+++ b/djsite/coolsite/roadmap/templates/roadmap/index.html
@@ -1,7 +1,20 @@
 {% extends 'roadmap/base.html' %}
 
 {% block content %}
-    {% for s in skill %}
-        <li><h2><a href="{{ s.get_absolute_url }}" >{{ s.name }}</a></h2></li>
-    {% endfor %}
+    <pre class="mermaid">
+        {{ mermaid_str }}
+    </pre>
+ <script type="module">
+      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+      const callback = function() {
+        alert('A callback was triggered');
+      };
+
+      const config = {
+      startOnLoad: true,
+      flowchart: { useMaxWidth: true, htmlLabels: true, curve: 'cardinal' },
+      securityLevel: 'loose',
+    };
+      mermaid.initialize(config);
+ </script>
 {% endblock %}
